added eureka configuration for all microservices

--- a/paiement.properties
+++ b/paiement.properties
@@ -9,4 +9,11 @@ server.port=8081
 # Configuration de Docker
 spring.data.mongodb.uri=mongodb://localhost:27017/paiements
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+# Activer l'enregistrement de service auprès d'Eureka
+eureka.client.register-with-eureka=true
+# Activer la récupération de la liste des services auprès d'Eureka
+eureka.client.fetch-registry=true
+# Spécifier l'URL du serveur Eureka Naming
+eureka.client.serviceUrl.defaultZone=http://localhost:6666/eureka/
