--- a/produits.properties
+++ b/produits.properties
@@ -7,3 +7,11 @@ server.port=8083
 
 # Configuration de Docker
 spring.data.mongodb.uri=mongodb://localhost:27017/produits
+
+
+# Activer l'enregistrement de service auprès d'Eureka
+eureka.client.register-with-eureka=true
+# Activer la récupération de la liste des services auprès d'Eureka
+eureka.client.fetch-registry=true
+# Spécifier l'URL du serveur Eureka Naming
+eureka.client.serviceUrl.defaultZone=http://localhost:6666/eureka/
