--- a/produits.properties
+++ b/produits.properties
@@ -5,7 +5,8 @@ spring.data.mongodb.password=password
 
 # Configuration de Docker
 spring.data.mongodb.uri=mongodb://localhost:27017/produits
-
+# Configuration du serveur Tomcat
+server.port=8083
 
 # Activer l'enregistrement de service auprès d'Eureka
 eureka.client.register-with-eureka=true
