--- a/zuul.properties
+++ b/zuul.properties
@@ -1,5 +1,10 @@
 server.port=8762
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# Activer l'enregistrement de service auprès d'Eureka
+eureka.client.register-with-eureka=true
+# Activer la récupération de la liste des services auprès d'Eureka
+eureka.client.fetch-registry=true
+# Spécifier l'URL du serveur Eureka Naming
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 zuul.routes.client.url=http://localhost:8888
 zuul.routes.commande.url=http://localhost:8888
 zuul.routes.paiement.url=http://localhost:8888
