--- a/commande.properties
+++ b/commande.properties
@@ -14,3 +14,5 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 # Spécifier l'URL du serveur Eureka Naming
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+eureka.instance.hostname=localhost
