made some changes

--- a/zuul.properties
+++ b/zuul.properties
@@ -5,6 +5,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 # Spécifier l'URL du serveur Eureka Naming
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+
 zuul.routes.client.url=http://localhost:8888
 zuul.routes.commande.url=http://localhost:8888
 zuul.routes.paiement.url=http://localhost:8888
