still not working

--- a/zuul.properties
+++ b/zuul.properties
@@ -1,11 +1,14 @@
-server.port=8762
+# Activer l'enregistrement de service auprès d'Eureka
+eureka.client.register-with-eureka=true
+# Activer la récupération de la liste des services auprès d'Eureka
+eureka.client.fetch-registry=true
 # Spécifier l'URL du serveur Eureka Naming
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
+
 
 zuul.routes.client.url=http://localhost:8888
 zuul.routes.commande.url=http://localhost:8888
 zuul.routes.paiement.url=http://localhost:8888
 zuul.routes.produits.url=http://localhost:8888
 
-
+server.port=8762
