using spring cloud gateway

--- a/zuul.properties
+++ b/zuul.properties
@@ -5,10 +5,18 @@ eureka.client.fetch-registry=true
 # Spécifier l'URL du serveur Eureka Naming
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.routes[0].id=paiement
+spring.cloud.gateway.routes[0].uri=lb://PAIEMENT/paiement
+spring.cloud.gateway.routes[0].predicates[0]=Path=/paiement/**
 
-zuul.routes.client.url=http://localhost:8888
-zuul.routes.commande.url=http://localhost:8888
-zuul.routes.paiement.url=http://localhost:8888
-zuul.routes.produits.url=http://localhost:8888
+spring.cloud.gateway.routes[1].id=comande
+spring.cloud.gateway.routes[1].uri=lb://COMMANDE/commande
+spring.cloud.gateway.routes[1].predicates[0]=Path=/commande/**
+
+spring.cloud.gateway.routes[2].id=produits
+spring.cloud.gateway.routes[2].uri=lb://PRODUITS/produits
+spring.cloud.gateway.routes[2].predicates[0]=Path=/produits/**
+
 
 server.port=8762
