--- a/paiement.properties
+++ b/paiement.properties
@@ -18,3 +18,4 @@ eureka.client.fetch-registry=true
 # Spécifier l'URL du serveur Eureka Naming
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+eureka.instance.hostname=localhost
