--- a/zuul.properties
+++ b/zuul.properties
@@ -10,7 +10,7 @@ spring.cloud.gateway.routes[0].id=paiement
 spring.cloud.gateway.routes[0].uri=lb://PAIEMENT/paiement
 spring.cloud.gateway.routes[0].predicates[0]=Path=/paiement/**
 
-spring.cloud.gateway.routes[1].id=comande
+spring.cloud.gateway.routes[1].id=commande
 spring.cloud.gateway.routes[1].uri=lb://COMMANDE/commande
 spring.cloud.gateway.routes[1].predicates[0]=Path=/commande/**
 
