--- a/zuul.properties
+++ b/zuul.properties
@@ -11,8 +11,8 @@ spring.cloud.gateway.routes[0].uri=lb://PAIEMENT/paiement
 spring.cloud.gateway.routes[0].predicates[0]=Path=/paiement/**
 
 spring.cloud.gateway.routes[1].id=commande
-spring.cloud.gateway.routes[1].uri=lb://COMMANDE/commandes
-spring.cloud.gateway.routes[1].predicates[0]=Path=/commandes/**
+spring.cloud.gateway.routes[1].uri=lb://COMMANDE/commande
+spring.cloud.gateway.routes[1].predicates[0]=Path=/commande/**
 
 spring.cloud.gateway.routes[2].id=produits
 spring.cloud.gateway.routes[2].uri=lb://PRODUITS/produits
