--- a/zuul.properties
+++ b/zuul.properties
@@ -3,7 +3,7 @@ eureka.client.register-with-eureka=true
 # Activer la récupération de la liste des services auprès d'Eureka
 eureka.client.fetch-registry=true
 # Spécifier l'URL du serveur Eureka Naming
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
 
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.routes[0].id=paiement
