updated db link

--- a/produits.properties
+++ b/produits.properties
@@ -4,7 +4,7 @@ spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 
 # Configuration de Docker
-spring.data.mongodb.uri=mongodb://localhost:27017/produits
+spring.data.mongodb.uri=mongodb://mongo:27017/produits
 # Configuration du serveur Tomcat
 server.port=0
 
