--- a/paiement.properties
+++ b/paiement.properties
@@ -7,7 +7,7 @@ spring.data.mongodb.port =  27017
 server.port=0
 
 # Configuration de Docker
-spring.data.mongodb.uri=mongodb://mongo:27017/paiements
+spring.data.mongodb.uri=mongodb://localhost:27017/paiements
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
