changed again db link

--- a/client.properties
+++ b/client.properties
@@ -5,4 +5,4 @@ spring.data.mongodb.database=client
 server.port=8888
 
 # Configuration de Docker
-spring.data.mongodb.uri=mongodb://localhost:27017/client
+spring.data.mongodb.uri=mongodb://mongodb:27017/client
