--- a/commande.properties
+++ b/commande.properties
@@ -5,7 +5,7 @@ spring.data.mongodb.database=commandes
 server.port=0
 
 # Configuration de Docker
-spring.data.mongodb.uri=mongodb://localhost:27017/commandes
+spring.data.mongodb.uri=mongodb://mongodb:27017/commandes
 
 
 # Activer l'enregistrement de service auprès d'Eureka
