changing links again

--- a/paiement.properties
+++ b/paiement.properties
@@ -1,13 +1,13 @@
 # Configuration de la connexion MongoDB
 spring.data.mongodb.database=paiements
-spring.data.mongodb.host = 127.0.0.1
+spring.data.mongodb.host = mongo
 spring.data.mongodb.port =  27017
 
 # Configuration du serveur Tomcat
 server.port=0
 
 # Configuration de Docker
-spring.data.mongodb.uri=mongodb://localhost:27017/paiements
+spring.data.mongodb.uri=mongodb://mongo:27017/paiements
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
