--- a/zuul.properties
+++ b/zuul.properties
@@ -18,5 +18,8 @@ spring.cloud.gateway.routes[2].id=produits
 spring.cloud.gateway.routes[2].uri=lb://PRODUITS/produits
 spring.cloud.gateway.routes[2].predicates[0]=Path=/produits/**
 
+spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedMethods=GET,POST,PATCH,PUT,DELETE
+spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedHeaders=Content-Type,Authorization
 
 server.port=8762
